// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 50,
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 15,
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={0}
    style={
      [
        {
          "color": "#181818",
          "fontSize": 18,
          "fontWeight": "300",
          "lineHeight": 22,
        },
        undefined,
      ]
    }
  >
    Button title
  </Text>
</View>
`;

exports[`Button renders disabled button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 50,
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 15,
      },
      {
        "opacity": 0.5,
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={0}
    style={
      [
        {
          "color": "#181818",
          "fontSize": 18,
          "fontWeight": "300",
          "lineHeight": 22,
        },
        undefined,
      ]
    }
  >
    Button title
  </Text>
</View>
`;
